--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   "routes": [
     {
       "src": "/todos",
-      "dest": "/todos"
+      "dest": "index.js"
     },
     {
       "src": "/(.*)",
