--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
   ],
   "routes": [
     {
-      "src": "/todos",
-      "dest": "index.js"
+      "src": "/api/todos",
+      "dest": "/api/index.js"
     },
     {
       "src": "/(.*)",
